# CMake_Example

./: CMakeLists.txt  CMakeSettings.json  README.md
src/: CMakeLists.txt
